# coverage_pyver_pragma

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  cov-report.ini  exclude_test.py  formate.toml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.ci/: actions_deploy_conda.sh  copy_pypi_2_github.py  travis_deploy_conda.sh
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
coverage_pyver_pragma/: __init__.py  grammar.py
doc-source/: Building.rst  Source.rst  api.rst  conf.py  configuration.rst  contributing.rst  docs.rst  index.rst  installation.rst  license.rst  requirements.txt  syntax.rst  usage.rst
doc-source/_templates/sidebar/: navigation.html
tests/: demo_code.py  requirements.txt  test_grammar.py  test_plugin.py  test_regex.py
tests/test_plugin_/: test_plugin.txt  test_plugin_3_10_.txt  test_plugin_3_6_.txt  test_plugin_3_7_.txt  test_plugin_3_8_.txt
