[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "coverage_pyver_pragma"
version = "0.2.4"
description = "Plugin for Coverage.py to selectively ignore branches depending on the Python version."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/python-coincidence/coverage_pyver_pragma"
"Issue Tracker" = "https://github.com/python-coincidence/coverage_pyver_pragma/issues"
"Source Code" = "https://github.com/python-coincidence/coverage_pyver_pragma"
Documentation = "https://coverage_pyver_pragma.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[tool.mkrecipe]
extras = [ "all",]
conda-channels = [ "conda-forge", "domdfcoding",]
